--- a/interfazobra.ui
+++ b/interfazobra.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>815</width>
-    <height>553</height>
+    <height>562</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -133,14 +133,7 @@
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QTableView" name="TablaMed">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>150</height>
-             </size>
-            </property>
-           </widget>
+           <widget class="TablaMedCert" name="TablaMed" native="true"/>
           </item>
          </layout>
         </widget>
@@ -181,6 +174,12 @@
    <class>Editor</class>
    <extends>QWidget</extends>
    <header>./Editor/editor.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TablaMedCert</class>
+   <extends>QWidget</extends>
+   <header>./Tablas/tablamedcert.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
