Arreglado el error con edicion de decimales en tabla de medicion Se fija la altura de la tabla de medicion

--- a/interfazobra.ui
+++ b/interfazobra.ui
@@ -97,6 +97,20 @@
             </widget>
            </item>
            <item>
+            <widget class="QPushButton" name="botonCopiar">
+             <property name="text">
+              <string>Copiar</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="botonPegar">
+             <property name="text">
+              <string>Pegar</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
