--- a/interfazobra.ui
+++ b/interfazobra.ui
@@ -111,6 +111,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QPushButton" name="botonGuardar">
+             <property name="text">
+              <string>Guardar</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
