--- a/Ui/mainwindow.ui
+++ b/Ui/mainwindow.ui
@@ -589,7 +589,7 @@
    <addaction name="actionCerrar"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <widget class="QToolBar" name="toolBar">
+  <widget class="QToolBar" name="editlBar">
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
@@ -603,8 +603,30 @@
    <addaction name="actionCortar"/>
    <addaction name="actionPegar"/>
    <addaction name="separator"/>
+  </widget>
+  <widget class="QToolBar" name="MoveBar">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
    <addaction name="actionAtras"/>
    <addaction name="actionAdelante"/>
+  </widget>
+  <widget class="QToolBar" name="CertBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
    <addaction name="separator"/>
   </widget>
   <action name="actionNuevo">
