--- a/Ui/mainwindow.ui
+++ b/Ui/mainwindow.ui
@@ -511,6 +511,7 @@
     <property name="title">
      <string>&amp;Edicion</string>
     </property>
+    <addaction name="separator"/>
     <addaction name="actionDeshacer"/>
     <addaction name="actionRehacer"/>
     <addaction name="separator"/>
@@ -589,7 +590,7 @@
    <addaction name="actionCerrar"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <widget class="QToolBar" name="editlBar">
+  <widget class="QToolBar" name="EditlBar">
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
@@ -599,14 +600,16 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionDeshacer"/>
+   <addaction name="actionRehacer"/>
    <addaction name="actionCopiar"/>
    <addaction name="actionCortar"/>
    <addaction name="actionPegar"/>
    <addaction name="separator"/>
   </widget>
-  <widget class="QToolBar" name="MoveBar">
+  <widget class="QToolBar" name="MovBar">
    <property name="windowTitle">
-    <string>toolBar_2</string>
+    <string>toolBar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -614,6 +617,7 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="separator"/>
    <addaction name="actionAtras"/>
    <addaction name="actionAdelante"/>
   </widget>
@@ -694,16 +698,6 @@
    </property>
    <property name="text">
     <string>Salir</string>
-   </property>
-  </action>
-  <action name="actionDeshacer">
-   <property name="text">
-    <string>Deshacer</string>
-   </property>
-  </action>
-  <action name="actionRehacer">
-   <property name="text">
-    <string>Rehacer</string>
    </property>
   </action>
   <action name="actionCopiar">
@@ -924,6 +918,39 @@
   <action name="actionD">
    <property name="text">
     <string>d</string>
+   </property>
+  </action>
+  <action name="actionDeshacer">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../recursos.qrc">
+     <normaloff>:/images/deshacer.png</normaloff>:/images/deshacer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Deshacer</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
+   <property name="shortcutContext">
+    <enum>Qt::WindowShortcut</enum>
+   </property>
+  </action>
+  <action name="actionRehacer">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../recursos.qrc">
+     <normaloff>:/images/rehacer.png</normaloff>:/images/rehacer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Rehacer</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+Z</string>
    </property>
   </action>
  </widget>
