Añadido soporte para undo en edicion de resumen, precio, cantidad y medicion

--- a/Dialogos/dialogosuprimirmedicion.ui
+++ b/Dialogos/dialogosuprimirmedicion.ui
@@ -28,7 +28,7 @@
        <item>
         <widget class="QRadioButton" name="radioButton_Suprimir">
          <property name="text">
-          <string>Suprimir fases y líneas de medición</string>
+          <string>Eliminar medición</string>
          </property>
         </widget>
        </item>
