--- a/recursos.qrc
+++ b/recursos.qrc
@@ -14,5 +14,8 @@
         <file>images/Atras.png</file>
 		<file>images/deshacer.png</file>
 		<file>images/rehacer.png</file>
+		<file>images/SubirTodo.png</file>
+		<file>images/deshacer.png</file>
+		<file>images/rehacer.png</file>
     </qresource>
 </RCC>
