--- a/recursos.qrc
+++ b/recursos.qrc
@@ -17,5 +17,6 @@
 		<file>images/SubirTodo.png</file>
 		<file>images/deshacer.png</file>
 		<file>images/rehacer.png</file>
+		<file>images/tree.png</file>
     </qresource>
 </RCC>
