Arreglado error en exportacion bc3 ya que exportaba el texto con codigo html Ahora exporta texto plano

--- a/Ui/dialogodatoscodigoresumen.ui
+++ b/Ui/dialogodatoscodigoresumen.ui
@@ -71,6 +71,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QCheckBox" name="checkBox">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Completar datos</string>
        </property>
