--- a/Ui/mainwindow.ui
+++ b/Ui/mainwindow.ui
@@ -427,7 +427,7 @@
   </property>
   <property name="font">
    <font>
-    <family>URW Gothic L</family>
+    <family>FreeSans</family>
     <pointsize>10</pointsize>
     <weight>50</weight>
     <italic>false</italic>
@@ -462,7 +462,7 @@
      <x>0</x>
      <y>0</y>
      <width>897</width>
-     <height>27</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
