--- a/estilo.qss
+++ b/estilo.qss
@@ -1,3 +1,50 @@
+QMenuBar {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 lightgray, stop:1 darkgray);
+    min-height: 40px;
+    /*background-color:red;*/
+}
+
+QMenuBar::item {
+    spacing: 3px; /* spacing between menu bar items */
+    padding: 1px 4px;
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 lightgray, stop:1 darkgray);
+    border-radius: 4px;
+}
+
+QMenuBar::item:selected { /* when selected using mouse or keyboard */
+    background: #a8a8a8;
+}
+
+QMenuBar::item:pressed {
+    background: #888888;
+}
+
+QToolBar {
+    background: red;
+    spacing: 3px; /* spacing between items in the tool bar */
+}
+
+QToolBox::tab {
+background: red;
+    /*background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);*/
+
+    border-radius: 5px;
+    color: darkgray;
+}
+
+QMenu::item {
+    /* sets background of menu item. set this to something non-transparent
+        if you want menu color and menu item color to be different */
+    background-color: transparent;
+}
+
+QMenu::item:selected { /* when user selects item using mouse or keyboard */
+    background-color: lightgray;
+}
+
+
 QHeaderView::section {
                       color: black;
                       background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
