--- a/estilo.qss
+++ b/estilo.qss
@@ -25,7 +25,7 @@ QToolBar {
 }
 
 QToolBox::tab {
-background: red;
+background: lightgray;
     /*background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                 stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
                                 stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);*/
